--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Betty Pluempe",
   "license": "ISC",
@@ -24,5 +24,8 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
     "webpack": "^1.12.13"
+  },
+  "engines": {
+    "node": "6.4.0"
   }
 }
